syntax = "proto3";
option java_multiple_files = true;

package sdmxdl.format.protobuf;

message Attribute {
  string id = 1;
  string name = 2;
  optional Codelist codelist = 3;
  AttributeRelationship relationship = 4;
}

enum AttributeRelationship {
  UNKNOWN = 0;
  DATAFLOW = 1;
  GROUP = 2;
  SERIES = 3;
  OBSERVATION = 4;
}

message Codelist {
  string ref = 1;
  map<string, string> codes = 2;
}

enum DataDetail {
  FULL = 0;
  DATA_ONLY = 1;
  SERIES_KEYS_ONLY = 2;
  NO_DATA = 3;
}

message Dataflow {
  string ref = 1;
  string structureRef = 2;
  string name = 3;
  optional string description = 4;
}

message DataQuery {
  string key = 1;
  DataDetail detail = 2;
}

message DataRepository {
  string name = 1;
  repeated DataStructure structures = 2;
  repeated Dataflow flows = 3;
  repeated DataSet dataSets = 4;
  string creationTime = 5;
  string expirationTime = 6;
}

message DataSet {
  string ref = 1;
  DataQuery query = 2;
  repeated Series data = 3;
}

message DataStructure {
  string ref = 1;
  repeated Dimension dimensions = 2;
  repeated Attribute attributes = 3;
  optional string timeDimensionId = 4;
  string primaryMeasureId = 5;
  string name = 6;
}

message Dimension {
  string id = 1;
  string name = 2;
  Codelist codelist = 3;
  int32 position = 4;
}

enum Feature {
  DATA_QUERY_KEY = 0;
  DATA_QUERY_DETAIL = 1;
}

message Obs {
  string period = 1;
  double value = 2;
  map<string, string> meta = 3;
}

message Series {
  string key = 1;
  map<string, string> meta = 2;
  repeated Obs obs = 3;
}
